force-app/main/default/objects/NoteMigration__c/NoteMigration__c.object-meta.xml
<CustomObject>
    <description>Object will help in content note migration from Poseidon database to Salesforce</description>
    <label>NoteMigration</label>
    <nameField>
        <displayFormat>NM-{000000}</displayFormat>
        <label>NoteMigration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NoteMigrations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>