force-app/main/default/objects/NoteMigration__c/fields/ContentNoteId__c.field-meta.xml
<CustomField>
    <fullName>ContentNoteId__c</fullName>
    <description>Salesforce Id of content note record created against this record</description>
    <inlineHelpText>Salesforce Id of content note record created against this record</inlineHelpText>
    <label>ContentNoteId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>