force-app/main/default/objects/NoteMigration__c/fields/EventId__c.field-meta.xml
<CustomField>
    <fullName>EventId__c</fullName>
    <description>Salesforce Id of event record where this record should associate as content note.</description>
    <inlineHelpText>Salesforce Id of event record where this record should associate as content note.</inlineHelpText>
    <label>EventId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>