force-app/main/default/objects/NoteMigration__c/fields/LastProcessedDate__c.field-meta.xml
<CustomField>
    <fullName>LastProcessedDate__c</fullName>
    <description>Timestamp when the record was last processed</description>
    <inlineHelpText>Timestamp when the record was last processed</inlineHelpText>
    <label>LastProcessedDate</label>
    <type>DateTime</type>
</CustomField>