force-app/main/default/objects/NoteMigration__c/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <description>Salesforce Id of lead record where this record should associate as content note.</description>
    <inlineHelpText>Salesforce Id of lead record where this record should associate as content note.</inlineHelpText>
    <label>LeadId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>