force-app/main/default/objects/NoteMigration__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>Market to which the record belongs to.</description>
    <label>Market</label>
    <length>50</length>
    <type>Text</type>
</CustomField>