force-app/main/default/objects/NoteMigration__c/fields/NoteContent__c.field-meta.xml
<CustomField>
    <fullName>NoteContent__c</fullName>
    <description>Campaign questions and answers coming from Poseidon</description>
    <inlineHelpText>Campaign questions and answers coming from Poseidon</inlineHelpText>
    <label>NoteContent</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>