force-app/main/default/objects/NoteMigration__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <description>Salesforce Id of opportunity record where this record should associate as content note.</description>
    <label>Opportunity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>